# update_engine

./: .gitignore  CMakeLists.txt  README.md  UpdateEngine.conf  boot_control_slinux.cc  clang.cmake  connection_manager_slinux.cc  connection_manager_slinux.h  connection_utils.cc  hardware_slinux.cc  hardware_slinux.h  image_properties_slinux.cc  main.cc  real_system_state.cc  update_metadata.pb.cc  update_metadata.pb.h
client_library/: client_dbus.h
common/: platform_constants_slinux.cc
dbus_bindings/: dbus-proxies.h  org.chromium.KioskAppService.h  org.chromium.UpdateEngineInterface.h  service_constants.h
debugd/: dbus-proxies.h
kiosk-app/: dbus-proxies.h  dbus-proxy-mocks.h
payload_consumer/: xz_extent_writer.h
payload_generator/: generate_delta_main.cc
power_manager/: dbus-proxies.h
proto_bindings/: update_engine.pb.cc  update_engine.pb.h  update_engine.proto
scripts/: postinst
session_manager/: dbus-proxies.h
shill/: dbus-proxies.h
